[package]
name = "tishlang_lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for Tish"
license-file = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tish-lsp"
path = "src/main.rs"

[dependencies]
tishlang_ast = { path = "../tish_ast" }
tishlang_parser = { path = "../tish_parser" }
tishlang_fmt = { path = "../tish_fmt" }
tishlang_lint = { path = "../tish_lint" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde_json = "1"
regex = "1"
walkdir = "2"
