[package]
name = "tishlang_lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for Tish"
license-file = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tish-lsp"
path = "src/main.rs"

[dependencies]
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
tishlang_fmt = { path = "../tish_fmt", version = ">=0.1" }
tishlang_lint = { path = "../tish_lint", version = ">=0.1" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde_json = "1"
regex = "1"
walkdir = "2"
