[package]
name = "tish_mlx"
version = "0.1.0"
edition = "2021"
description = "Apple MLX compute backend for Tish — Apple Silicon only"

# mlx-rs vendors the MLX C library and builds it from source via cmake.
# No system-level MLX installation needed — only Xcode Command Line Tools.
[target.'cfg(target_os = "macos")'.dependencies]
mlx-rs = { version = "0.25", features = ["metal"] }
