[package]
name = "tishlang_native"
version = "0.1.0"
edition = "2021"
description = "Native code generation backend for Tish (Cranelift / direct compile)"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_build_utils = { path = "../tish_build_utils" }
tishlang_ast = { path = "../tish_ast" }
tishlang_bytecode = { path = "../tish_bytecode" }
tishlang_compile = { path = "../tish_compile" }
tishlang_cranelift = { path = "../tish_cranelift" }
tishlang_llvm = { path = "../tish_llvm" }
tishlang_opt = { path = "../tish_opt" }
