[package]
name = "tishlang_native"
version = "0.1.0"
edition = "2021"
description = "Native code generation backend for Tish (Cranelift / direct compile)"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_build_utils = { path = "../tish_build_utils", version = ">=0.1" }
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_cranelift = { path = "../tish_cranelift", version = ">=0.1" }
tishlang_llvm = { path = "../tish_llvm", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }
