[package]
name = "tishlang_opt"
version = "0.1.0"
edition = "2021"
description = "AST optimization pass for Tish (constant folding, short-circuit, etc.)"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }

[dev-dependencies]
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
