[package]
name = "tishlang_parser"
version = "0.1.0"
edition = "2021"
description = "Tish recursive descent parser"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_lexer = { path = "../tish_lexer", version = ">=0.1" }
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
