[package]
name = "tishlang_parser"
version = "0.1.0"
edition = "2021"
description = "Tish recursive descent parser"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_lexer = { path = "../tish_lexer", version = ">=0.1" }
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
# #381: grow the stack on demand during the recursive descent so deeply-nested source can't overflow
# the fixed OS thread stack before the MAX_PARSE_DEPTH bound converts it into a catchable error.
# (No-op shim on wasm32, matching tish_eval / tish_vm.)
stacker = "0.1"
