[package]
name = "tish-polars"
version = "0.1.0"
edition = "2021"
description = "Polars bindings for Tish"

[dependencies]
tish_core = { path = "../tish_core" }
tish_eval = { path = "../tish_eval", features = ["regex"] }
polars = { version = "0.44", default-features = false, features = ["lazy", "csv", "json"] }
