[package]
name = "tishlang_runtime"
version = "0.1.0"
edition = "2021"
description = "Minimal runtime for Tish compiled output"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []
http = ["tokio", "reqwest", "futures", "bytes", "tiny_http", "tishlang_core/regex"]
fs = []
process = []
regex = ["tishlang_core/regex"]
# WebSocket (JS-like API). Modular: import { WebSocket, Server } from 'tish:ws'
ws = ["tokio", "tokio/net", "tokio/io-util", "tokio-tungstenite", "futures-util", "lazy_static"]
# GPU compute — Apple Silicon only
metal = ["dep:tish_metal"]
mlx   = ["dep:tish_mlx"]

[dependencies]
tishlang_core = { path = "../tish_core", version = ">=0.1" }
tishlang_builtins = { path = "../tish_builtins", version = ">=0.1" }
tish_metal = { path = "../tish_metal", version = ">=0.1", optional = true }
tish_mlx   = { path = "../tish_mlx",   version = ">=0.1", optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream"], optional = true }
futures = { version = "0.3.32", optional = true }
bytes = { version = "1", optional = true }
tiny_http = { version = "0.12.0", optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
futures-util = { version = "0.3", optional = true }
lazy_static = { version = "1", optional = true }
