[package]
name = "tishlang_runtime"
version = "0.1.0"
edition = "2021"
description = "Minimal runtime for Tish compiled output"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []
http = [
    "dep:tokio",
    "dep:reqwest",
    "dep:futures",
    "dep:bytes",
    "dep:tiny_http",
    "dep:socket2",
    "dep:libc",
    "dep:arc-swap",
    "tishlang_core/regex",
    # `serve(port, handler)` dispatches handler closures across worker
    # threads (or subprocesses, in prefork mode). Both require `Value: Send`.
    "tishlang_core/send-values",
    "tishlang_builtins/send-values",
    "send-values",
]
# Enables `Arc`/`Mutex` values in `tishlang_core` so `Value: Send + Sync`.
# Used by `http` / `ws` and by dependents (e.g. `tish-callbacks`) that keep
# `Value` in a `static` registry and dispatch from multi-threaded async libs.
send-values = [
    "tishlang_core/send-values",
    "tishlang_builtins/send-values",
]
# Promise / `await` on settled values only (no `fetch` / HTTP stack). Used for WASI and other
# targets where the full `http` feature does not compile.
promise = ["send-values"]
# Phase-3 item 13: io_uring-backed accept + send loop (Linux only).
# Disabled by default; enable with `--feature http,http-io-uring` on Linux
# to pick up the experimental accept path.
http-io-uring = ["http"]
# hyper-based HTTP backend: async single-threaded tokio runtime per core, no
# per-connection OS threads. Unblocks the tiny_http thread-churn ceiling on
# macOS loopback (~140k RPS) and enables HTTP/2. Opt-in via the
# `TISH_HTTP_BACKEND=hyper` env var at runtime when the feature is compiled in.
http-hyper = [
    "http",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:core_affinity",
    "tokio/net",
    "tokio/rt",
    "tokio/io-util",
]
# `fs/promises` returns settled promises, so fs pulls in the promise machinery.
# `mkdtemp` needs a random suffix (predictable/timestamp names are a temp-dir security smell).
fs = ["promise", "dep:rand"]
process = []
# Interactive terminal I/O (issue #101): raw mode, key/resize events, size, alt screen.
tty = ["dep:crossterm"]
regex = ["tishlang_core/regex"]
# WebSocket (JS-like API). Modular: import { WebSocket, Server } from 'tish:ws'.
# Requires `send-values` because the WS server keeps an `Arc<dyn Fn + Send +
# Sync>`-typed listener closure that captures `VmRef`s; under `Rc<RefCell>`
# those captures aren't `Send` and the closure won't satisfy `NativeFn`.
ws = [
    "dep:tokio",
    "tokio/net",
    "tokio/io-util",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:lazy_static",
    "send-values",
    "tishlang_core/send-values",
    "tishlang_builtins/send-values",
]

[dependencies]
tishlang_core = { path = "../tish_core", version = ">=0.1" }
tishlang_builtins = { path = "../tish_builtins", version = ">=0.1" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream", "multipart"], optional = true }
futures = { version = "0.3.32", optional = true }
bytes = { version = "1", optional = true }
tiny_http = { version = "0.12.0", optional = true }
# fs feature only: random suffix for `mkdtemp`.
rand = { version = "0.10.1", optional = true }
socket2 = { version = "0.5", features = ["all"], optional = true }
libc = { version = "0.2", optional = true }
arc-swap = { version = "1", optional = true }
# Interactive terminal I/O (feature = tty): cross-platform raw mode, key/resize events, size.
crossterm = { version = "0.28", optional = true }
# hyper backend (feature = http-hyper)
hyper = { version = "1", default-features = false, features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["server", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
core_affinity = { version = "0.8", optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
futures-util = { version = "0.3", optional = true }
lazy_static = { version = "1", optional = true }

# #381 native-codegen recursion guard: stack-pressure probe for guarded self-recursive fns.
# Non-wasm only — wasm traps on overflow inside its own sandbox, so the guard is a no-op there.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
stacker = "0.1"
