[package]
name = "tishlang_vm"
version = "0.1.0"
edition = "2021"
description = "Bytecode VM for Tish"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []
regex = ["tishlang_core/regex"]
# For wasm32 target: use web_sys console for output
wasm = ["dep:wasm-bindgen"]
# Built-in modules: fs, http, process (for bytecode LoadNativeExport)
fs = ["tishlang_runtime/fs"]
process = ["tishlang_runtime/process"]
http = ["tishlang_runtime/http"]
ws = ["tishlang_runtime/ws"]
metal = ["tishlang_runtime/metal"]
mlx   = ["tishlang_runtime/mlx"]

[dependencies]
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_builtins = { path = "../tish_builtins", version = ">=0.1" }
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_core = { path = "../tish_core", version = ">=0.1" }
tishlang_runtime = { path = "../tish_runtime", version = ">=0.1", optional = true }
rand = "0.10"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
