[package]
name = "tishlang_vm"
version = "0.1.0"
edition = "2021"
description = "Bytecode VM for Tish"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []
regex = ["tishlang_core/regex"]
# For wasm32 target: use web_sys console for output
wasm = ["dep:wasm-bindgen"]
# Built-in modules: fs, http, process (for bytecode LoadNativeExport).
# `dep:tishlang_runtime` is required so enabling e.g. `http` always activates the optional runtime crate
# (some Cargo/cache combinations only saw `tishlang_runtime/http` and built VM stubs without http).
fs = ["dep:tishlang_runtime", "tishlang_runtime/fs"]
process = ["dep:tishlang_runtime", "tishlang_runtime/process"]
http = ["dep:tishlang_runtime", "tishlang_runtime/http"]
ws = ["dep:tishlang_runtime", "tishlang_runtime/ws"]

[dependencies]
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_builtins = { path = "../tish_builtins", version = ">=0.1" }
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_core = { path = "../tish_core", version = ">=0.1" }
tishlang_runtime = { path = "../tish_runtime", version = ">=0.1", optional = true }
rand = "0.10"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
