[package]
name = "tishlang_vm"
version = "0.1.0"
edition = "2021"
description = "Bytecode VM for Tish"

license-file = { workspace = true }
repository = { workspace = true }
[features]
default = []
# RegExp needs the runtime's regex impls (regexp_new / regexp_test / regexp_exec and the
# regex-aware String methods) so the VM routes through the SAME code as the rust backend.
# Mirror the fs/http pattern: pull in the optional runtime crate + its regex feature.
regex = ["tishlang_core/regex", "dep:tishlang_runtime", "tishlang_runtime/regex"]
# Propagate `send-values` so that every native-function closure we build
# in the VM (array / string / object methods) picks up the right
# `Rc<dyn Fn>` vs `Arc<dyn Fn + Send + Sync>` wrapper at compile time.
send-values = ["tishlang_core/send-values", "tishlang_builtins/send-values"]
# For wasm32 target: use web_sys console for output
wasm = ["dep:wasm-bindgen"]
# Built-in modules: fs, http, process (for bytecode LoadNativeExport).
# `dep:tishlang_runtime` is required so enabling e.g. `http` always activates the optional runtime crate
# (some Cargo/cache combinations only saw `tishlang_runtime/http` and built VM stubs without http).
fs = ["dep:tishlang_runtime", "tishlang_runtime/fs"]
process = ["dep:tishlang_runtime", "tishlang_runtime/process"]
# Timer globals + `tish:timers` LoadNativeExport (uses tishlang_runtime TLS timer registry).
timers = ["dep:tishlang_runtime"]
# Any HTTP build needs Send-safe values so handlers can be dispatched
# across worker threads or processes. HTTP implies timers (fetch/Promise often pair with setTimeout).
http = ["dep:tishlang_runtime", "tishlang_runtime/http", "send-values", "timers"]
# Promise + `tish:http.await` / `Promise` export without the full HTTP client stack (e.g. wasm32-wasip1).
promise = ["dep:tishlang_runtime", "tishlang_runtime/promise", "send-values"]
ws = ["dep:tishlang_runtime", "tishlang_runtime/ws"]

[dependencies]
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_builtins = { path = "../tish_builtins", version = ">=0.1" }
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_core = { path = "../tish_core", version = ">=0.1" }
tishlang_runtime = { path = "../tish_runtime", version = ">=0.1", optional = true }
rand = "0.10"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_parser = { path = "../tish_parser", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

# Numeric JIT (native codegen slice 1). Not built for wasm — cranelift-jit emits host
# machine code and cannot target wasm32. The wasm/wasi VM keeps the interpreter path.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cranelift = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
stacker = "0.1"
