[package]
name = "tish_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly backend for Tish - compiles to real .wasm"

[dependencies]
tish_build_utils = { path = "../tish_build_utils" }
tish_ast = { path = "../tish_ast" }
tish_compile = { path = "../tish_compile" }
tish_bytecode = { path = "../tish_bytecode" }
base64 = "0.22"
