[package]
name = "tishlang_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly backend for Tish - compiles to real .wasm"

license-file = { workspace = true }
repository = { workspace = true }
[dependencies]
tishlang_build_utils = { path = "../tish_build_utils", version = ">=0.1" }
tishlang_ast = { path = "../tish_ast", version = ">=0.1" }
tishlang_compile = { path = "../tish_compile", version = ">=0.1" }
tishlang_bytecode = { path = "../tish_bytecode", version = ">=0.1" }
tishlang_opt = { path = "../tish_opt", version = ">=0.1" }
base64 = "0.22"
